@@ -1,16 +1,14 @@
 package edu.ncsu.monopoly;
 
 import java.util.ArrayList;
-import java.util.Hashtable;
-
+import java.util.HashMap;
 public class GameBoard {
 
-	private ArrayList cells = new ArrayList();
-    private ArrayList chanceCards = new ArrayList();
+	private ArrayList<Cell> cells = new ArrayList<>();
+    private ArrayList<Card> chanceCards = new ArrayList<>();
 	//the key of colorGroups is the name of the color group.
-	private Hashtable colorGroups = new Hashtable();
-	private ArrayList communityChestCards = new ArrayList();
-	private GameMaster gameMaster;
+	private HashMap<String, Integer> colorGroups = new HashMap<>();
+	private ArrayList<Card> communityChestCards = new ArrayList<>();
 	
 	public GameBoard() {
 		Cell go = new GoCell();
@@ -31,19 +29,19 @@ public class GameBoard {
 	
 	public void addCell(PropertyCell cell) {
 		int propertyNumber = getPropertyNumberForColor(cell.getColorGroup());
-		colorGroups.put(cell.getColorGroup(), new Integer(propertyNumber + 1));
+		colorGroups.put(cell.getColorGroup(), Integer.valueOf(propertyNumber + 1));
         cells.add(cell);
 	}
 
     public Card drawCCCard() {
-        Card card = (Card)communityChestCards.get(0);
+        Card card = communityChestCards.get(0);
         communityChestCards.remove(0);
         addCard(card);
         return card;
     }
 
     public Card drawChanceCard() {
-        Card card = (Card)chanceCards.get(0);
+        Card card = chanceCards.get(0);
         chanceCards.remove(0);
         addCard(card);
         return card;
